# freezer-monitor

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  update.sh
.sqlx/: query-04923db5071d3d187001476afd03d37e5d35b8bdb9dba356d92f17863ace2931.json  query-085d8c7a3cc8636335b921dce1c6988dabcf2964d330d72452dbf6691f8e8399.json  query-0de1667052d443d59c3da1c14f17943db41d05da22a43879b5b82adb48a0ff16.json  query-1912f3a37aacd5e88c383522fb0758d574b8374f150b2562f7ebec432e2d3aed.json  query-2190887e7dc82331329e69324ab7133d1fc8778e1e20b0c6c3b249a52089b3ce.json  query-37b74b4e419a6e671d25aef800a860ff26fe59cab84611735fa0b6d945d715f0.json  query-3974a83c48000fd80cc6944f96a6ea7e0b2c9cc92567047cec182549b6496415.json  query-3ce6bd611e65e3c0183c09d6e880fb7faf4a04e7cabb4115abe8340f6fa155e9.json  query-42f3357aaba12f6cc7770606757760fb61e30324e654a9777b77e81550a9d6ff.json  query-440ff3895fefa52ff577ac30936b201bf84309e10fc0cd69973ed4877f66d5f4.json  query-4447cfe9e97373924e992661fc99b81b0f6907e054520b3e0b001b3d01449a2b.json  query-4a09703cf3bcccd8d967da9869edc0515b5427a3fea77abc0b70ea849dbb2a6e.json  query-5e4e080a110baa9fa146330eb7ce9020b0e69a52e874974e52400c0ee54be848.json  query-67c837ca48fcec5a20a377c70609e6e894c0541f7a3bb7149da52f9209aa655f.json  query-7448f80a6c95afc6b572444957953a5d55ece83707835a215906cd0f72b8c221.json  query-7e7b26858973c3799d0a27bb22300e169864f9869b5b451515b433e5711a9bcb.json  query-7ff582f60b6d6e1d83bf7ab4eb2453053506b7cee9e4dddce21d3e22411a9b5f.json  query-86c15517fcd5edb823de465fbc9fa4171f41f3c1dadda9677ff093e1f71502d9.json  (+23 more)
frontend/: index.html  (+2 more)
(+18 files in other folders)
