[package]
name = "freezer-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["fs"] }
utoipa = { version = "4", features = ["axum_extras"] }
jsonwebtoken = "9"
tower_governor = { version = "0.8", features = ["axum"] }